# my-openenv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: __init__.py  client.py  environment.py  grader.py  main.py  models.py  tasks.py
server/: __init__.py  app.py
